@@ -1,10 +1,12 @@
 package it.epicode.MindWander.service;
 
+import it.epicode.MindWander.dto.StanzaDto;
 import it.epicode.MindWander.dto.StrutturaDto;
 import it.epicode.MindWander.dto.StrutturaResponseDto;
 import it.epicode.MindWander.exception.NotFoundException;
 import it.epicode.MindWander.model.Recensione;
 import it.epicode.MindWander.model.ServizioExtra;
+import it.epicode.MindWander.model.Stanza;
 import it.epicode.MindWander.model.Struttura;
 import it.epicode.MindWander.repository.ServizioExtraRepository;
 import it.epicode.MindWander.repository.StrutturaRepository;
@@ -35,20 +37,9 @@ public class StrutturaService {
         struttura.setImmaginiUrl(strutturaDto.getImmaginiUrl());
         struttura.setServiziExtra(getServiziExtraByIds(strutturaDto.getServiziExtraIds()));
 
+        struttura.setStanze(convertToStanze(strutturaDto.getStanze(), struttura));
+
         strutturaRepository.save(struttura);
-        return convertToResponseDto(struttura);
-    }
-
-    public List<StrutturaResponseDto> findAll() {
-        return strutturaRepository.findAll()
-                .stream()
-                .map(this::convertToResponseDto)
-                .collect(Collectors.toList());
-    }
-
-    public StrutturaResponseDto findById(Long id) {
-        Struttura struttura = strutturaRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Struttura con ID " + id + " non trovata"));
         return convertToResponseDto(struttura);
     }
 
@@ -67,7 +58,23 @@ public class StrutturaService {
         struttura.setImmaginiUrl(dto.getImmaginiUrl());
         struttura.setServiziExtra(getServiziExtraByIds(dto.getServiziExtraIds()));
 
+        struttura.getStanze().clear();
+        struttura.getStanze().addAll(convertToStanze(dto.getStanze(), struttura));
+
         strutturaRepository.save(struttura);
+        return convertToResponseDto(struttura);
+    }
+
+    public List<StrutturaResponseDto> findAll() {
+        return strutturaRepository.findAll()
+                .stream()
+                .map(this::convertToResponseDto)
+                .collect(Collectors.toList());
+    }
+
+    public StrutturaResponseDto findById(Long id) {
+        Struttura struttura = strutturaRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Struttura con ID " + id + " non trovata"));
         return convertToResponseDto(struttura);
     }
 
@@ -78,33 +85,13 @@ public class StrutturaService {
         strutturaRepository.deleteById(id);
     }
 
-    private StrutturaResponseDto convertToResponseDto(Struttura struttura) {
-        StrutturaResponseDto strutturaResponseDto = new StrutturaResponseDto();
-        strutturaResponseDto.setId(struttura.getId());
-        strutturaResponseDto.setNome(struttura.getNome());
-        strutturaResponseDto.setDescrizione(struttura.getDescrizione());
-        strutturaResponseDto.setCitta(struttura.getCitta());
-        strutturaResponseDto.setIndirizzo(struttura.getIndirizzo());
-        strutturaResponseDto.setPrezzo(struttura.getPrezzo());
-        strutturaResponseDto.setDisponibile(struttura.getDisponibile());
-        strutturaResponseDto.setMoodAssociato(struttura.getMoodAssociato());
-        strutturaResponseDto.setCategoriaAlloggio(struttura.getCategoriaAlloggio());
-        strutturaResponseDto.setImmaginiUrl(struttura.getImmaginiUrl());
-        strutturaResponseDto.setServiziExtra(struttura.getServiziExtra()
-                .stream()
-                .map(ServizioExtra::getNome)
-                .collect(Collectors.toList()));
-        return strutturaResponseDto;
-    }
+    public List<StrutturaResponseDto> findWithFiltersSimple(
+            String citta,
+            String mood,
+            Double minPrezzo,
+            Double maxPrezzo,
+            Double votoMedioMin) {
 
-    private Set<ServizioExtra> getServiziExtraByIds(List<Long> ids) {
-        return ids.stream()
-                .map(id -> servizioExtraRepository.findById(id)
-                        .orElseThrow(() -> new NotFoundException("Servizio extra con ID " + id + " non trovato")))
-                .collect(Collectors.toSet());
-    }
-
-    public List<StrutturaResponseDto> findWithFiltersSimple(String citta, String mood, Double minPrezzo, Double maxPrezzo, Double votoMedioMin) {
         List<Struttura> strutture = strutturaRepository.findAll();
 
         return strutture.stream()
@@ -119,9 +106,69 @@ public class StrutturaService {
                                         .average()
                                         .orElse(0) >= votoMedioMin))
                 .map(this::convertToResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    private StrutturaResponseDto convertToResponseDto(Struttura struttura) {
+        StrutturaResponseDto dto = new StrutturaResponseDto();
+        dto.setId(struttura.getId());
+        dto.setNome(struttura.getNome());
+        dto.setDescrizione(struttura.getDescrizione());
+        dto.setCitta(struttura.getCitta());
+        dto.setIndirizzo(struttura.getIndirizzo());
+        dto.setPrezzo(struttura.getPrezzo());
+        dto.setDisponibile(struttura.getDisponibile());
+        dto.setMoodAssociato(struttura.getMoodAssociato());
+        dto.setCategoriaAlloggio(struttura.getCategoriaAlloggio());
+        dto.setImmaginiUrl(struttura.getImmaginiUrl());
+        dto.setServiziExtra(struttura.getServiziExtra()
+                .stream()
+                .map(ServizioExtra::getNome)
+                .collect(Collectors.toList()));
 
+        dto.setStanze(convertToStanzeDto(struttura.getStanze()));
 
+        return dto;
+    }
+
+    private List<Stanza> convertToStanze(List<StanzaDto> stanzeDto, Struttura struttura) {
+        if (stanzeDto == null) return List.of();
+
+        return stanzeDto.stream()
+                .map(dto -> {
+                    Stanza stanza = new Stanza();
+                    stanza.setNome(dto.getNome());
+                    stanza.setPrezzo(dto.getPrezzo());
+                    stanza.setPostiLetto(dto.getPostiLetto());
+                    stanza.setStruttura(struttura);
+                    return stanza;
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<StanzaDto> convertToStanzeDto(List<Stanza> stanze) {
+        if (stanze == null) return List.of();
+
+        return stanze.stream()
+                .map(stanza -> {
+                    StanzaDto dto = new StanzaDto();
+                    dto.setId(stanza.getId());
+                    dto.setNome(stanza.getNome());
+                    dto.setPostiLetto(stanza.getPostiLetto());
+                    dto.setPrezzo(stanza.getPrezzo());
+                    dto.setDescrizione(stanza.getDescrizione());
+                    dto.setStrutturaId(stanza.getStruttura() != null ? stanza.getStruttura().getId() : null);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    private Set<ServizioExtra> getServiziExtraByIds(List<Long> ids) {
+        if (ids == null) return Set.of();
+
+        return ids.stream()
+                .map(id -> servizioExtraRepository.findById(id)
+                        .orElseThrow(() -> new NotFoundException("Servizio extra con ID " + id + " non trovato")))
+                .collect(Collectors.toSet());
+    }
 }
